--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,7 @@
     "postcss": "^7.0.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
